--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,8 @@
 controllers:
     resource: ../src/Controller/
-    type: attribute
+    type: annotation
+
+api:
+  resource: ../src/Controller/Api/
+  type: annotation
+  prefix: /api
